data/derived/sp14/progs/unify/prog4566.ml.out
Characters 16-20:
  let a = explode 1001;;
                  ^^^^
Error: This expression has type int but an expression was expected of type
         string
